# whetstone

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STACK-SETUP.md  build.rs  install.sh  justfile  setup-stack.sh  setup-whetstone.sh  uninstall.sh
.agents/skills/whetstone/: SKILL.md
.agents/skills/whetstone/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: whetstone-instincts.yaml
.claude/memstack/: MEMSTACK.md  config.json
.claude/memstack/hooks/: pre-tool-notify.bat  pre-tool-notify.sh
.claude/memstack/rules/: memstack.md
.claude/skills/whetstone/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: ci.yml  release.yml
assets/: MEMSTACK.md
assets/hooks/: post-commit.sh  pre-push.sh  session-end.sh  session-start.sh
docs/: cli-reference.md  configuration.md  editors.md  headroom-service.md  install.md  troubleshooting.md
scripts/: release-publish.sh  release.sh
src/: cli.rs  config.rs  db.rs  headroom.rs  hooks.rs  main.rs  memory.rs  preflight.rs  release.rs  rtk.rs  setup.rs  shell.rs  ui.rs  uninstall.rs  update.rs  version.rs  wrapper.rs
